some viz + experiments with pumping random

--- a/Field_gru.ipynb
+++ b/Field_gru.ipynb
@@ -221,7 +221,6 @@
     "            tmp.append((i, j))\n",
     "            train_set.append(tmp)\n",
     "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=0)\n",
-    "    i = 0\n",
     "    running_loss = 0.0\n",
     "    for cells, neighbours, cords in train_loader:\n",
     "        loc_y, loc_x = cords\n",
@@ -234,7 +233,6 @@
     "            new_field[y, x] = new_state\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        i += 1\n",
     "    mean_information = torch.mean(field ** 2)\n",
     "    with torch.no_grad():\n",
     "        field = new_field.clone()\n",
@@ -247,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(net.state_dict(), 'models/first_model')"
+    "torch.save(net.state_dict(), 'models/viz_model')"
    ]
   },
   {
