tryhard to distance estimation

--- a/simple_viz.ipynb
+++ b/simple_viz.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 103,
    "metadata": {
     "scrolled": false
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 105,
    "metadata": {
     "scrolled": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -235,16 +235,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]; Mean Information : 0.4601840078830719\n",
-      "[2]; Mean Information : 0.43196529150009155\n",
-      "[3]; Mean Information : 0.5523274540901184\n",
-      "[4]; Mean Information : 0.7048530578613281\n",
-      "[5]; Mean Information : 0.8166463375091553\n",
-      "[6]; Mean Information : 0.8753125667572021\n",
-      "[7]; Mean Information : 0.8977521061897278\n",
-      "[8]; Mean Information : 0.9040918946266174\n",
-      "[9]; Mean Information : 0.9055777192115784\n",
-      "[10]; Mean Information : 0.9058724641799927\n"
+      "[1]; Mean Information : 0.4612850844860077\n",
+      "[2]; Mean Information : 0.42908504605293274\n",
+      "[3]; Mean Information : 0.5465522408485413\n",
+      "[4]; Mean Information : 0.6965112686157227\n",
+      "[5]; Mean Information : 0.8108859062194824\n",
+      "[6]; Mean Information : 0.8725081086158752\n",
+      "[7]; Mean Information : 0.8965822458267212\n",
+      "[8]; Mean Information : 0.9036175012588501\n",
+      "[9]; Mean Information : 0.9054225087165833\n",
+      "[10]; Mean Information : 0.9058328866958618\n"
      ]
     },
     {
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "anim.save('animations/anim_2.gif', writer='imagemagick', fps=2)"
+    "anim.save('animations/anim_weight.gif', writer='imagemagick', fps=2)"
    ]
   },
   {
